https://dsc.gg/nyxtools

--- a/config.json
+++ b/config.json
@@ -5,5 +5,5 @@
     "vouch_command_channel": "",
     "backup_command_channel": "",
     "status": "dsc.gg/nyxtools",
-    "embed_color": "magenta"
+    "hex_embed_color": "CA00CC"
 }
